tests/src/Entity/Invalid/MissingHasStatesInterface.php
<?php

declare(strict_types=1);

namespace Inwebo\DoctrineEventSourcing\Tests\src\Entity\Invalid;

class MissingHasStatesInterface
{
}
